Deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: job-analyzer-service
spec:
  ports:
    - port: 5000
      targetPort: 8080
      name: http
  selector:
    app: job-analyzer
